--- a/game_page_index.html
+++ b/game_page_index.html
@@ -21,6 +21,7 @@
 		<h3 id="player_answer"></h3>
 		<div id="output" class="col-lg-6"> </div>
 		<br>
+		
 		<br>
 		<label>Number 1 <b style="color: red">
 		</b>
@@ -31,7 +32,7 @@
 		</label>
         <input type="text" id="Number-2" class="form-control" placeholder="Number-2">
 		<br>
-		<button onclick="send()" class="btn btn-success" style="width: 30%;">Send</button>
+		<button onclick="send()" class="btn btn-primary" style="width: 30%;">Send</button>
 	</center>
 </div>
 
