--- a/game_page_index.html
+++ b/game_page_index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Guess The Word</title>
+	<title>Math Quiz</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -10,13 +10,14 @@
 </head>
 <body>
 
+
 <h4 id="player1_name"></h4> <span id="player1_score"></span>
 <br>
 <h4 id="player2_name"></h4> <span id="player2_score"></span>
 
 <div class="container">
 	<center>
-		<h2 style="color: white;">Guess The Word!</h2>
+		<h2 style="color: white;">Math Quiz</h2>
 		<h3 id="player_question"></h3>
 		<h3 id="player_answer"></h3>
 		<div id="output" class="col-lg-6"> </div>
